# UC-jmbIFR-marine_species_seg

./: .stestr.conf  Jenkinsfile  README.md  cookiecutter-deep.yaml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
marine_species_seg/: api.py
marine_species_seg/tests/: test_api.py
