# -*- coding: utf-8 -*-
[metadata]
name = marine_species_seg
summary = WIP : Identification of marine species from EMSO Azores deep-sea obervatory
description-file =
    README.md
author = Jean-Marie BAUDET
author-email = jean.marie.baudet@ifremer.fr
version = 0.0.1
license = MIT
home-page = https://github.com/jmbIFR/marine_species_seg
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    marine_species_seg

[entry_points]
deepaas.v2.model =
    marine_species_seg = marine_species_seg.api
